--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
 title: Araf Akil
-description: This webpage contains my profile and resume.
+description: This is Araf Akil's portfolio website.
